Fix member-modal styl, no need about in modal view; it can be too long.

--- a/client/stylus/app.members.styl
+++ b/client/stylus/app.members.styl
@@ -117,7 +117,7 @@ app.members.styl
 
   .member-item
     border-bottom        1px solid rgba(0, 0, 0, 0.075)
-    padding              24px 20px 27px 20px
+    padding              14px 8px 8px 14px
     margin-bottom        0
     borderBox()
     > span
@@ -160,7 +160,8 @@ app.members.styl
       footer
         color           #a5a5a5
         button
-          margin-right  30px
+          right         14px
+          bottom        12px
         a.following
         a.followers
           color             #7F7F7F
@@ -168,7 +169,6 @@ app.members.styl
           font-size         11px
           letter-spacing    -1px
           line-height       11px
-          margin            0 30px 0 0
           padding           5px 0px
           cite
             width             18px
